added some more functionality

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit
                 tellus, luctus nec ullamcorper mattis.
               </p>
-              <a href="#" class="btn btn-custom mt-3">Buy Now</a>
+              <a href="#" id= customButton class="btn btn-custom mt-3">Buy Now</a>
             </div>
           </div>
         </div>
