--- a/index.html
+++ b/index.html
@@ -30,7 +30,13 @@
 
   <body style="background-color: #f5f5f5">
     <!-- navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg navbar-light" style="
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+      background-color: white;
+      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+    ">
       <div class="container-fluid">
         <a
           class="navbar-brand"
@@ -172,7 +178,7 @@
                 Lorem ipsum dolor sit amet, consectetur adipiscing elit. Ut elit
                 tellus, luctus nec ullamcorper mattis.
               </p>
-              <a href="#" id= customButton class="btn btn-custom mt-3">Buy Now</a>
+              <a href="#" id=customButton class="btn btn-custom mt-3 ">Buy Now</a>
             </div>
           </div>
         </div>
@@ -194,7 +200,7 @@
               alt="Syltherine"
             />
             <div class="hover-overlay">
-              <button class="btn btn-custom mb-3">Add to cart</button>
+              <button class=" btn btn-custom mb-3 product-btn">Add to cart</button>
               <div class="hover-options">
                 <a href="#" class="me-3"
                   ><img
@@ -239,7 +245,7 @@
               alt="Leviosa"
             />
             <div class="hover-overlay">
-              <button class="btn btn-custom mb-3">Add to cart</button>
+              <button class=" btn btn-custom mb-3 product-btn">Add to cart</button>
               <div class="hover-options">
                 <a href="#" class="me-3"
                   ><img
@@ -275,7 +281,7 @@
               alt="Lolito"
             />
             <div class="hover-overlay">
-              <button class="btn btn-custom mb-3">Add to cart</button>
+              <button class=" btn btn-custom mb-3 product-btn">Add to cart</button>
               <div class="hover-options">
                 <a href="#" class="me-3"
                   ><img
@@ -314,7 +320,7 @@
               alt="Respira"
             />
             <div class="hover-overlay">
-              <button class="btn btn-custom mb-3">Add to cart</button>
+              <button class=" btn btn-custom mb-3 product-btn">Add to cart</button>
               <div class="hover-options">
                 <a href="#" class="me-3"
                   ><img
@@ -350,7 +356,7 @@
               alt="Grifo"
             />
             <div class="hover-overlay">
-              <button class="btn btn-custom mb-3">Add to cart</button>
+              <button class=" btn btn-custom mb-3 product-btn">Add to cart</button>
               <div class="hover-options">
                 <a href="#" class="me-3"
                   ><img
@@ -386,7 +392,7 @@
               alt="Muggo"
             />
             <div class="hover-overlay">
-              <button class="btn btn-custom mb-3">Add to cart</button>
+              <button class=" btn btn-custom mb-3 product-btn">Add to cart</button>
               <div class="hover-options">
                 <a href="#" class="me-3"
                   ><img
@@ -422,7 +428,7 @@
               alt="Pingky"
             />
             <div class="hover-overlay">
-              <button class="btn btn-custom mb-3">Add to cart</button>
+              <button class=" btn btn-custom mb-3 product-btn">Add to cart</button>
               <div class="hover-options">
                 <a href="#" class="me-3"
                   ><img
@@ -461,7 +467,7 @@
               alt="Potty"
             />
             <div class="hover-overlay">
-              <button class="btn btn-custom mb-3">Add to cart</button>
+              <button class=" btn btn-custom mb-3 product-btn">Add to cart</button>
               <div class="hover-options">
                 <a href="#" class="me-3"
                   ><img
