added wish list bar

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
                     style="width: 24px; height: 24px"
                   />
                 </li>
-                <li class="nav-item">
+                <li class="nav-item ">
                   <img
                     class="mdiaccount-alert-outline-icon ms-3"
                     loading="lazy"
@@ -212,7 +212,13 @@
                     src="./public/comparesvgrepocom-1.svg"
                   />Compare</a
                 >
-                <a href="#"
+                <a href="#"  class="heart-icon"
+                  ><img
+                    class="heart-icon"
+                    alt=""
+                    src="./public/heart.svg"
+                  />Like</a
+                >
                   ><img
                     class="heart-icon"
                     alt=""
@@ -259,7 +265,13 @@
                     src="./public/comparesvgrepocom-1.svg"
                   />Compare</a
                 >
-                <a href="#">Like</a>
+                <a href="#"  class="heart-icon"
+                  ><img
+                    class="heart-icon"
+                    alt=""
+                    src="./public/heart.svg"
+                  />Like</a
+                >
               </div>
             </div>
             <div class="product-info">
@@ -297,7 +309,13 @@
                     src="./public/comparesvgrepocom-1.svg"
                   />Compare</a
                 >
-                <a href="#">Like</a>
+                <a href="#"  class="heart-icon"
+                  ><img
+                    class="heart-icon"
+                    alt=""
+                    src="./public/heart.svg"
+                  />Like</a
+                >
               </div>
             </div>
             <div class="product-info">
@@ -338,7 +356,13 @@
                     src="./public/comparesvgrepocom-1.svg"
                   />Compare</a
                 >
-                <a href="#">Like</a>
+                <a href="#"  class="heart-icon"
+                  ><img
+                    class="heart-icon"
+                    alt=""
+                    src="./public/heart.svg"
+                  />Like</a
+                >
               </div>
             </div>
             <div class="product-info">
@@ -376,7 +400,13 @@
                     src="./public/comparesvgrepocom-1.svg"
                   />Compare</a
                 >
-                <a href="#">Like</a>
+                <a href="#"  class="heart-icon"
+                  ><img
+                    class="heart-icon"
+                    alt=""
+                    src="./public/heart.svg"
+                  />Like</a
+                >
               </div>
             </div>
             <div class="product-info">
@@ -414,7 +444,13 @@
                     src="./public/comparesvgrepocom-1.svg"
                   />Compare</a
                 >
-                <a href="#">Like</a>
+                <a href="#"  class="heart-icon"
+                  ><img
+                    class="heart-icon"
+                    alt=""
+                    src="./public/heart.svg"
+                  />Like</a
+                >
               </div>
             </div>
             <div class="product-info">
@@ -452,7 +488,13 @@
                     src="./public/comparesvgrepocom-1.svg"
                   />Compare</a
                 >
-                <a href="#">Like</a>
+                <a href="#"  class="heart-icon"
+                  ><img
+                    class="heart-icon"
+                    alt=""
+                    src="./public/heart.svg"
+                  />Like</a
+                >
               </div>
             </div>
             <div class="product-info">
@@ -493,7 +535,13 @@
                     src="./public/comparesvgrepocom-1.svg"
                   />Compare</a
                 >
-                <a href="#">Like</a>
+                <a href="#"  class="heart-icon"
+                  ><img
+                    class="heart-icon"
+                    alt=""
+                    src="./public/heart.svg"
+                  />Like</a
+                >
               </div>
             </div>
             <div class="product-info">
@@ -699,7 +747,7 @@
                 <input
                   type="text"
                   placeholder="Enter your email address"
-                  class="w-75 border-0 border-bottom border-black"
+                  class="w-75 border-0 border-bottom border-none"
                 />
                 <button
                   class="border-0 border-bottom bg-transparent border-black text-capitalize fw-medium"
@@ -728,6 +776,18 @@
       </div>
       <div class="cart-footer">
         <p>Total: <span id="cartTotal">Rp 0</span></p>
+      </div>
+    </div>
+    <!-- Wishlist Sidebar -->
+    <div id="wishlistSidebar" class="wishlist-sidebar">
+      <div class="wishlist-header">
+        <h3>Your Wishlist</h3>
+        <button id="closeWishlistBtn" class="close-wishlist-btn">
+          &times;
+        </button>
+      </div>
+      <div class="wishlist-items">
+        <!-- Wishlist items will be appended here dynamically -->
       </div>
     </div>
 
