final changes done till wishlist

--- a/index.html
+++ b/index.html
@@ -133,11 +133,12 @@
                 </li>
                 <li class="nav-item ">
                   <img
+                  id="heartIcon"
                     class="mdiaccount-alert-outline-icon ms-3"
                     loading="lazy"
                     alt=""
                     src="./public/akariconsheart.svg"
-                    style="width: 24px; height: 24px"
+                    style="width: 24px; height: 24px ;cursor: pointer"
                   />
                 </li>
                 <li class="nav-item position-relative">
